--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>45-Day Challenge – Stop Masturbation</title>
+  <title>45-Day</title>
   <link rel="icon" type="image/x-icon" href="looggg">
 
   <style>
