--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       dayDiv.className = 'day';
     
       const label = document.createElement('label');
-      label.innerHTML=its day ${i};
+      label.innerHTML="Its day"+i;
 
       const checkbox = document.createElement('input');
       checkbox.type = 'checkbox';
